# scott_new

my-property-solutions-master/my-property-solutions-master/: .editorconfig  .gitignore  .pre-commit-config.yaml  manage.py  newrelic.ini  objects_to_be_created.py  pyproject.toml  req.txt  requirements.txt
my-property-solutions-master/my-property-solutions-master/asset/custom/: custom_js.js
my-property-solutions-master/my-property-solutions-master/contacts/: admin.py  forms.py  models.py  urls.py  views.py
my-property-solutions-master/my-property-solutions-master/contacts/migrations/: 0001_initial.py  0002_initial.py
my-property-solutions-master/my-property-solutions-master/dashboard/: admin.py  forms.py  models.py  urls.py  views.py
my-property-solutions-master/my-property-solutions-master/dashboard/migrations/: 0001_initial.py
my-property-solutions-master/my-property-solutions-master/deals/: admin.py  forms.py  main.py  models.py  urls.py  views.py
my-property-solutions-master/my-property-solutions-master/deals/migrations/: 0001_initial.py  0002_initial.py  0005_solicitor_owner.py  (+22 more)
my-property-solutions-master/my-property-solutions-master/leads/: admin.py  forms.py  models.py  urls.py  views.py
my-property-solutions-master/my-property-solutions-master/my_property_solutions/: celery.py  forms.py  local_settings.py  settings.py  urls.py  views.py  wsgi.py
my-property-solutions-master/my-property-solutions-master/reminders/: admin.py  forms.py  models.py  urls.py  views.py
my-property-solutions-master/my-property-solutions-master/settings/: admin.py  forms.py  models.py  urls.py  views.py
my-property-solutions-master/my-property-solutions-master/user_profile/: __init__.py  admin.py  apps.py  forms.py  models.py  signals.py
(+185 files in other folders)
